--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 02:05:02 2018</p>
+         Last Run: Sat Nov 24 03:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>7</td>
-                        <td>83</td>
+                        <td>6</td>
+                        <td>84</td>
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>61</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -50,11 +50,23 @@
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>42</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>6</td>
+                        <td>73</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>S</td>
+                        <td>28</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>6</td>
@@ -62,19 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>31</td>
-                     </tr>
-                     <tr>
-                        <td>03:00 PM</td>
-                        <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>6</td>
-                        <td>75</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>SSE</td>
-                        <td>28</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -105,7 +105,7 @@
                  "-6",
                  "-6",
                  "-4",
-                 "-6"
+                 "-4"
                ]
              },
              {
@@ -118,7 +118,7 @@
                  "-3",
                  "-2",
                  "-1",
-                 "-2"
+                 "-1"
                ]
              }
            ]
@@ -176,7 +176,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
+                 "6",
                  "6",
                  "6",
                  "6"
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
+                 "84",
                  "77",
-                 "74",
-                 "75"
+                 "73",
+                 "74"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "61",
-                 "42",
-                 "31",
-                 "28"
+                 "59",
+                 "37",
+                 "28",
+                 "25"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 02:05:02 2018</p>
+         Last Run: Sat Nov 24 03:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,35 +268,35 @@
                         <td>-1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>60</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>SW</td>
-                        <td>16</td>
+                        <td>WSW</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
+                        <td>0</td>
+                        <td>-2</td>
                         <td>1</td>
-                        <td>-1</td>
-                        <td>1</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>19</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>2</td>
-                        <td>0</td>
-                        <td>2</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>1</td>
                         <td>57</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>18</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -324,8 +324,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-1",
-                 "0"
+                 "-2",
+                 "-2"
                ]
              },
              {
@@ -336,8 +336,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-1",
-                 "1",
-                 "2"
+                 "0",
+                 "1"
                ]
              }
            ]
@@ -396,7 +396,7 @@
                "data":[
                  "1",
                  "1",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -405,8 +405,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
-                 "57",
+                 "61",
+                 "58",
                  "57"
                ]
              },
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
-                 "19",
-                 "18"
+                 "17",
+                 "23",
+                 "22"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 02:05:02 2018</p>
+         Last Run: Sat Nov 24 03:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -480,38 +480,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>4</td>
-                        <td>77</td>
+                        <td>-2</td>
+                        <td>-5</td>
+                        <td>5</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>73</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>76</td>
+                        <td>5</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>72</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>77</td>
+                        <td>5</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>73</td>
+                        <td>75</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,7 +538,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-5",
                  "-4",
                  "-4"
                ]
@@ -550,7 +550,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "-1",
                  "-1"
                ]
@@ -609,9 +609,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "5",
+                 "5",
+                 "5"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "76",
-                 "77"
+                 "78",
+                 "78",
+                 "80"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
-                 "72",
-                 "73"
+                 "75",
+                 "75",
+                 "75"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 02:05:02 2018</p>
+         Last Run: Sat Nov 24 03:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -697,32 +697,32 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>47</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>5</td>
-                        <td>85</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>6</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>42</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>5</td>
-                        <td>88</td>
+                        <td>6</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -754,7 +754,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-7",
+                 "-6",
                  "-7"
                ]
              },
@@ -766,7 +766,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-4",
+                 "-3",
                  "-4"
                ]
              }
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "5"
+                 "6",
+                 "6",
+                 "6"
                ]
              },
              {
@@ -836,8 +836,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "83",
-                 "85",
-                 "88"
+                 "83",
+                 "87"
                ]
              },
              {
@@ -846,8 +846,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "42",
+                 "48",
+                 "43",
                  "41"
                ]
              }
