--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 04:05:06 2018</p>
+         Last Run: Sat Nov 24 05:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>6</td>
-                        <td>84</td>
+                        <td>5</td>
+                        <td>83</td>
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>59</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -50,31 +50,31 @@
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>37</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>28</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>6</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>24</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -105,7 +105,7 @@
                  "-6",
                  "-6",
                  "-4",
-                 "-4"
+                 "-6"
                ]
              },
              {
@@ -118,7 +118,7 @@
                  "-3",
                  "-2",
                  "-1",
-                 "-1"
+                 "-2"
                ]
              }
            ]
@@ -176,7 +176,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "5",
                  "6",
                  "6",
                  "6"
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
+                 "83",
                  "77",
-                 "73",
-                 "74"
+                 "72",
+                 "75"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
-                 "37",
-                 "28",
-                 "24"
+                 "45",
+                 "39",
+                 "30",
+                 "27"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 04:05:06 2018</p>
+         Last Run: Sat Nov 24 05:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,11 +268,11 @@
                         <td>-1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>60</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>18</td>
+                        <td>SW</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -280,23 +280,23 @@
                         <td>1</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>SW</td>
-                        <td>24</td>
+                        <td>SSW</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>57</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>24</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -396,7 +396,7 @@
                "data":[
                  "1",
                  "1",
-                 "1"
+                 "2"
                ]
              },
              {
@@ -405,8 +405,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
-                 "58",
+                 "62",
+                 "59",
                  "57"
                ]
              },
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
-                 "24",
-                 "24"
+                 "17",
+                 "16",
+                 "15"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 04:05:06 2018</p>
+         Last Run: Sat Nov 24 05:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -480,38 +480,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>-2</td>
+                        <td>-5</td>
                         <td>5</td>
                         <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>74</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>74</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>5</td>
-                        <td>80</td>
+                        <td>4</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>74</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,7 +538,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-5",
                  "-4",
                  "-4"
                ]
@@ -550,7 +550,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "-1",
                  "-1"
                ]
@@ -610,8 +610,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "5",
-                 "5"
+                 "4",
+                 "4"
                ]
              },
              {
@@ -622,7 +622,7 @@
                "data":[
                  "79",
                  "78",
-                 "80"
+                 "79"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
-                 "74",
-                 "74"
+                 "63",
+                 "65",
+                 "68"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 04:05:06 2018</p>
+         Last Run: Sat Nov 24 05:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,7 +698,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>82</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -722,7 +722,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>6</td>
-                        <td>87</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
                  "84",
-                 "87"
+                 "84",
+                 "88"
                ]
              },
              {
