--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 05:05:09 2018</p>
+         Last Run: Sat Nov 24 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -42,27 +42,27 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>6</td>
-                        <td>77</td>
+                        <td>5</td>
+                        <td>76</td>
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>39</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>30</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>6</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>27</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -177,7 +177,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "6",
+                 "5",
                  "6",
                  "6"
                ]
@@ -189,9 +189,9 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "83",
-                 "77",
-                 "72",
-                 "75"
+                 "76",
+                 "73",
+                 "76"
                ]
              },
              {
@@ -201,9 +201,9 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "45",
-                 "39",
-                 "30",
-                 "27"
+                 "28",
+                 "23",
+                 "23"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 05:05:09 2018</p>
+         Last Run: Sat Nov 24 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>1</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -296,7 +296,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
                  "16",
-                 "15"
+                 "16",
+                 "14"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 05:05:09 2018</p>
+         Last Run: Sat Nov 24 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -487,7 +487,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>63</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -499,7 +499,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>65</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -511,7 +511,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>68</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "63",
-                 "65",
-                 "68"
+                 "62",
+                 "64",
+                 "66"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 05:05:09 2018</p>
+         Last Run: Sat Nov 24 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>84</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>47</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>84</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>43</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>6</td>
-                        <td>88</td>
+                        <td>90</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>41</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
-                 "84",
-                 "88"
+                 "87",
+                 "87",
+                 "90"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "43",
-                 "41"
+                 "52",
+                 "48",
+                 "46"
                ]
              }
            ]
